<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="48dp"
        tools:context=".view.auth.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="?emphasisLow"
            android:text="@string/app_name"
            android:textAppearance="?textAppearanceHeadline6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/sign_in"
            android:textAppearance="?textAppearanceHeadline4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="?emphasisMedium"
            android:text="@string/sign_in_desc"
            android:textAppearance="?textAppearanceSubtitle2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone_auth"
            style="?materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="start|center_vertical"
            android:paddingVertical="16dp"
            android:text="@string/use_phone_number"
            app:icon="@drawable/ic_twotone_call_24"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start|center_vertical"
            android:paddingVertical="16dp"
            android:text="@string/google_sign_in"
            android:textColor="?colorOnError"
            app:backgroundTint="?colorError"
            app:icon="@drawable/ic_twotone_mail_outline_24"
            app:iconGravity="end" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>