<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="48dp"
        tools:context=".view.auth.PhoneAuthFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="?emphasisLow"
            android:text="@string/almost_there"
            android:textAppearance="?textAppearanceHeadline6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/sign_in_phone"
            android:textAppearance="?textAppearanceHeadline4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="?emphasisMedium"
            android:text="@string/sign_in_phone_desc"
            android:textAppearance="?textAppearanceSubtitle2" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/phone_number_hint"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/ic_twotone_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start|center_vertical"
            android:paddingVertical="16dp"
            android:text="@string/send_code"
            app:icon="@drawable/ic_twotone_send_24"
            app:iconGravity="end" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>